# capll-for-All-

./: ADAS_Algorithm_Integration_Learning_Plan.md  Automotive_Test_Validation_250_Detailed_Answers.md  Automotive_Test_Validation_250_Detailed_Answers_With_Scenarios.md  CAPL_Language_Overview.md  Detailed_ADAS_Integration_Learning_Guide.md
adas_ecu_c/: CMakeLists.txt  README.md
adas_ecu_c/include/diagnostics/: dtc_manager.h
adas_ecu_c/include/drivers/: can_driver.h  can_messages.h
adas_ecu_c/include/features/: acc_controller.h  bsd_controller.h  hha_controller.h  lka_controller.h  parking_controller.h  sensor_fusion.h
adas_ecu_c/include/hal/: hal_timer.h  hal_types.h
adas_ecu_c/include/rtos/: scheduler.h
adas_ecu_c/src/: main.c
adas_ecu_c/src/diagnostics/: dtc_manager.c
adas_ecu_c/src/drivers/: can_driver.c  can_messages.c
adas_ecu_c/src/features/: acc_controller.c  bsd_controller.c  hha_controller.c  lka_controller.c  parking_controller.c  sensor_fusion.c
adas_ecu_c/src/hal/: hal_timer.c
adas_ecu_c/src/rtos/: scheduler.c
adas_l4_project/: CMakeLists.txt  README.md
adas_l4_project/capl_scripts/: ADAS_L4_Monitor.can
adas_l4_project/docs/: 01_ADAS_L4_Overview.md  02_Sensor_Technologies.md  03_Perception_Algorithms.md  04_Path_Planning_Control.md  05_ISO26262_Functional_Safety.md  06_CPP_Implementation_Deep_Dive.md
adas_l4_project/include/can/: adas_can_bus.hpp  adas_can_signals.hpp
adas_l4_project/include/control/: pid_controller.hpp  vehicle_controller.hpp
adas_l4_project/include/perception/: lane_detector.hpp  perception_types.hpp  sensor_fusion.hpp
adas_l4_project/include/planning/: path_planner.hpp  route_types.hpp  trajectory_generator.hpp
adas_l4_project/include/safety/: adas_fsm.hpp  emergency_handler.hpp  safety_monitor.hpp
adas_l4_project/include/sensors/: camera_sensor.hpp  imu_sensor.hpp  lidar_sensor.hpp  radar_sensor.hpp  sensor_types.hpp
adas_l4_project/src/: main.cpp
adas_l4_project/src/can/: adas_can_bus.cpp
adas_l4_project/src/control/: pid_controller.cpp  vehicle_controller.cpp
adas_l4_project/src/perception/: lane_detector.cpp  sensor_fusion.cpp
adas_l4_project/src/planning/: path_planner.cpp  trajectory_generator.cpp
adas_l4_project/src/safety/: adas_fsm.cpp  emergency_handler.cpp  safety_monitor.cpp
adas_l4_project/src/sensors/: camera_sensor.cpp  imu_sensor.cpp  lidar_sensor.cpp  radar_sensor.cpp
adas_l4_project/tests/: test_perception.cpp  test_sensors.cpp
adas_release_test_suite_python/: .gitignore  README.md  REALTIME_INTEGRATION_GUIDE.md  assertions.py  conftest.py  pytest.ini  requirements.txt  run_release_gate.py  sut_adapter.py  test_catalog.py  ui_app.py
adas_scenario_questions/: 01_forward_collision_warning.md  02_automatic_emergency_braking.md  03_lane_departure_warning_and_keep_assist.md  04_blind_spot_detection.md  05_adaptive_cruise_control.md  06_parking_assistance.md  07_traffic_sign_recognition.md  08_pedestrian_and_cyclist_detection.md  09_night_vision_and_driver_monitoring.md  10_sensor_fusion_and_system_integration.md  ADAS_Test_Case_Document.md  Aptiv_ARXML_Integration_STAR_Learning_Guide.md  README.md
advanced_debugging_rca/: Advanced_Debugging_RCA_Automotive_ECU.md
automotive_project_manager/: 01_pm_fundamentals_and_frameworks.md  02_automotive_technical_knowledge.md  03_star_scenarios.md  04_stakeholder_and_risk_management.md  05_agile_scrum_in_automotive.md  06_budget_schedule_kpis.md  07_interview_200_qa.md  README.md
automotive_tools_learning/: 01_LDRA_Complete_Guide.md  02_VectorCAST_Complete_Guide.md  03_GTest_GMock_Complete_Guide.md
automotive_tools_learning/gtest_cpp_project/: CMakeLists.txt
automotive_tools_learning/gtest_cpp_project/include/: bms_controller.h  can_packer.h  doip_decoder.h  gear_recommender.h  pedal_safety.h  safety_monitor.h  sensor_fusion.h  uds_handler.h
automotive_tools_learning/gtest_cpp_project/src/: bms_controller.cpp  can_packer.cpp  doip_decoder.cpp  gear_recommender.cpp  pedal_safety.cpp  safety_monitor.cpp  sensor_fusion.cpp  uds_handler.cpp
automotive_tools_learning/gtest_cpp_project/tests/: test_bms_controller.cpp  test_can_packer.cpp  test_doip_decoder.cpp  test_gear_recommender.cpp  test_main.cpp  test_pedal_safety.cpp  test_safety_monitor.cpp  test_sensor_fusion.cpp  test_uds_handler.cpp
automotive_tools_learning/gtest_cpp_project/tests/mocks/: mock_bms.h  mock_gear_input.h  mock_sensor_fusion.h
bug_management_automotive/: 01_adas_bugs.md  02_infotainment_bugs.md  03_cluster_bugs.md  04_telematics_bugs.md  05_recurring_bugs_diagnostics.md  06_uds_diagnostics.md  README.md
cluster_scenarios/: 01_vehicle_cluster_scenarios.md  02_sensor_clustering_algorithm.md  03_instrument_cluster_hmi.md  README.md
cpp_automotive/: 01_cpp_fundamentals_automotive.md  02_cpp_oop_automotive.md  03_cpp_memory_rtos.md  04_cpp_templates_stl.md  05_cpp_autosar_safety.md  06_cpp_star_interview_qa.md  CPP_Advanced_Embedded_Patterns.md  CPP_Embedded_ADAS_ECU_Complete_Guide.md  CPP_Embedded_Cheat_Sheet.md  CPP_General_Learning_Guide.md  README.md
ecu_can_uds_project/: CMakeLists.txt  README.md
ecu_can_uds_project/capl_scripts/: CAN_UDS_Tester.can
ecu_can_uds_project/docs/: 01_CAN_Bus_Fundamentals.md  02_UDS_Protocol_Deep_Dive.md  03_ECU_Software_Architecture.md  04_Embedded_Cpp_Patterns.md  05_Troubleshooting_Guide.md
ecu_can_uds_project/include/can/: can_bus.hpp  can_frame.hpp
ecu_can_uds_project/include/ecu/: dtc_manager.hpp  ecu_core.hpp
ecu_can_uds_project/include/uds/: uds_server.hpp  uds_types.hpp
ecu_can_uds_project/src/: main.cpp
ecu_can_uds_project/src/can/: can_bus.cpp  can_frame.cpp
ecu_can_uds_project/src/ecu/: dtc_manager.cpp  ecu_core.cpp
ecu_can_uds_project/src/uds/: uds_server.cpp
ecu_can_uds_project/tests/: test_can_bus.cpp  test_dtc_manager.cpp
f1_career_roadmap/: F1_Career_Roadmap_From_Automotive_Testing.md
hil_testing/: ECU_Release_Regression_Sanity_CI_Guide.md  Robot_Framework_Automotive_Validation_Guide.md
infotainment_scenarios/: 07_cluster_scenarios_star.md
marelli_cluster_lead/: README.md  (+8 more)
(+209 files in other folders)
